[gd_scene load_steps=5 format=2]

[ext_resource path="res://source/game/building/Structure.gd" type="Script" id=1]
[ext_resource path="res://source/game/building/HoverDetector.tscn" type="PackedScene" id=2]
[ext_resource path="res://source/game/building/Building.tscn" type="PackedScene" id=3]
[ext_resource path="res://source/game/building/Lot.tscn" type="PackedScene" id=4]

[node name="Structure" type="Node2D" groups=[
"Structure",
]]
script = ExtResource( 1 )

[node name="HoverDetector" parent="." instance=ExtResource( 2 )]

[node name="Building" parent="." instance=ExtResource( 3 )]

[node name="Lot" parent="." instance=ExtResource( 4 )]
[connection signal="mouse_entered" from="HoverDetector" to="." method="_on_HoverDetector_mouse_entered"]
[connection signal="mouse_exited" from="HoverDetector" to="." method="_on_HoverDetector_mouse_exited"]
[connection signal="building_finished" from="Lot" to="." method="_on_Lot_building_finished"]
[connection signal="building_started" from="Lot" to="." method="_on_Lot_building_started"]
